# funbro-data-model

./: README.md  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml
analysis/imdb_ddl/: dim_genre_ddl.sql  dim_title_ddl.sql  dim_title_genre_ddl.sql  dim_title_type_ddl.sql
analysis/staging/: titles_in_title_ratings_do_not_have_rows_on_title_basics.sql
macros/: grant_select_on_table.sql
models/funbro/: dim_genre.sql  dim_title.sql  dim_title_genre.sql  dim_title_type.sql
models/staging/: src_imdb.yml
tests/: assert_title_ratings_averageRating_column_is_valid.sql
