[tool.poetry]
name = "funbro-data-model"
version = "0.1.0"
description = ""
authors = ["intael <carlosvalde9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dbt = "^0.19"
dbt-core = "^0.19"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
